brat/test/golden/kernel/typed_th.brat.golden
Error in test/golden/kernel/typed_th.brat@5:17
id2 = { let f = {id;id} in q,q' => f(q),f(q') }
                ^^^^^^^

  Thunks not allowed in kernels: {:id()(「id()」):}

